--- a/SeniorRA_thermal_methods_SOM.tex
+++ b/SeniorRA_thermal_methods_SOM.tex
@@ -44,37 +44,37 @@
 \usepackage{framed}
 \definecolor{shadecolor}{RGB}{248,248,248}
 \newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
 \newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\ImportTok}[1]{#1}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
 \newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\BuiltInTok}[1]{#1}
-\newcommand{\ExtensionTok}[1]{#1}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
-\newcommand{\RegionMarkerTok}[1]{#1}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
 \newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 \usepackage{longtable,booktabs}
 \usepackage{graphicx,grffile}
 \makeatletter
@@ -113,7 +113,7 @@
 \usepackage{titling}
 
 % Create subtitle command for use in maketitle
-\newcommand{\subtitle}[1]{
+\providecommand{\subtitle}[1]{
   \posttitle{
     \begin{center}\large#1\end{center}
     }
@@ -121,8 +121,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{\texttt{ThermStats} : an \texttt{R} package for quantifying surface
-thermal heterogeneity in assessments of microclimates}
+  \title{\texttt{ThermStats} : an \texttt{R} package for quantifying surface thermal heterogeneity in assessments of microclimates}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
   \subtitle{Supplementary material}
@@ -131,91 +130,77 @@ thermal heterogeneity in assessments of microclimates}
     \date{}
     \predate{}\postdate{}
   
-\usepackage{natbib}
-\usepackage{fontspec}
-\newcommand*{\myfont}{\fontfamily{lmtt}\selectfont} % Latin Modern typewriter for syntax
-\DeclareTextFontCommand{\textmyfont}{\myfont}
 \usepackage{float}
-\usepackage{subcaption}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\chead{Supplementary material}
-\fancyfoot[CO,CE]{\thepage}
+\chead{Supplementary Material}
+\fancyfoot[C]{\thepage}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+\setlength\headheight{14.5pt}
 \usepackage{setspace}
 \doublespacing
 
-\usepackage{amsthm}
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{lemma}{Lemma}[section]
-\theoremstyle{definition}
-\newtheorem{definition}{Definition}[section]
-\newtheorem{corollary}{Corollary}[section]
-\newtheorem{proposition}{Proposition}[section]
-\theoremstyle{definition}
-\newtheorem{example}{Example}[section]
-\theoremstyle{definition}
-\newtheorem{exercise}{Exercise}[section]
-\theoremstyle{remark}
-\newtheorem*{remark}{Remark}
-\newtheorem*{solution}{Solution}
+ % For manual landscape pages
+\usepackage{lscape}
+\newcommand{\blandscape}{\begin{landscape}}
+\newcommand{\elandscape}{\end{landscape}}
+
+% For manual syntax highlighting
+\usepackage{fontspec}
+\setmainfont{Calibri} % Calibri is main font
+\newcommand*{\myfont}{\fontfamily{lmtt}\selectfont} % Latin Modern typewriter for syntax
+\DeclareTextFontCommand{\textmyfont}{\myfont}
+
+%  For tables
+\usepackage{multirow}
+\usepackage{gensymb}
+
+% To change labelling of supplementary figures and tables
+\newcommand{\beginsupplement}{\setcounter{table}{0}  \renewcommand{\tablename}{Supplementary Table} \setcounter{figure}{0} \renewcommand{\figurename}{Supplementary Figure}}
+
 \begin{document}
 \maketitle
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
-Rebecca A. Senior\textsuperscript{1}*, Jane K. Hill\textsuperscript{2}
-and David P. Edwards\textsuperscript{1}
+Rebecca A. Senior\textsuperscript{1}*, Jane K. Hill\textsuperscript{2} and David P. Edwards\textsuperscript{1}
 
-\textsuperscript{1}Department of Animal and Plant Sciences, Alfred Denny
-Building, University of Sheffield, Western Bank, Sheffield, S10 2TN, UK
+\textsuperscript{1}Department of Animal and Plant Sciences, Alfred Denny Building, University of Sheffield, Western Bank, Sheffield, S10 2TN, UK
 
-\textsuperscript{2}Department of Biology, University of York, Wentworth
-Way, York, YO10 5DD, UK
+\textsuperscript{2}Department of Biology, University of York, Wentworth Way, York, YO10 5DD, UK
 
-*\textbf{Corresponding author:}
-\href{mailto:rebecca.a.senior@gmail.com}{\nolinkurl{rebecca.a.senior@gmail.com}},
-+44(0)114 2220123 (R.A. Senior)
+*\textbf{Corresponding author:} \href{mailto:rebecca.a.senior@gmail.com}{\nolinkurl{rebecca.a.senior@gmail.com}}, +44(0)114 2220123 (R.A. Senior)
 
-\textbf{ORCID iDs:} orcid.org/0000-0002-8208-736X (R.A. Senior);
-orcid.org/0000-0003-1871-7715 (J.K. Hill)
+\textbf{ORCID iDs:} orcid.org/0000-0002-8208-736X (R.A. Senior); orcid.org/0000-0003-1871-7715 (J.K. Hill)
 
 \pagebreak
 \raggedright
-\setcounter{tocdepth}{2} \tableofcontents
+\setcounter{tocdepth}{2}
+\tableofcontents
 \pagebreak
 
-\section{Text S1: Package vignette}\label{text-s1-package-vignette}
-
+\hypertarget{text-s1-package-vignette}{%
+\section{Text S1: Package vignette}\label{text-s1-package-vignette}}
 
 
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=7.63in,]{../figures/schematic/schematic} 
+{\centering \includegraphics[width=7.63in,]{figures/fig-s-1} 
 
 }
 
-\caption{Schematic summarising the key functions for processing
-groups of images (left) or a single image (right).}\label{fig:fig-B-2}
+\caption{Schematic summarising the key functions for processing groups of images (left) or a single image (right).}\label{fig:fig-B-2}
 \end{figure}
 
-\subsection{Summary}\label{summary}
+\hypertarget{summary}{%
+\subsection{Summary}\label{summary}}
 
-\texttt{ThermStats} is designed for biologists using thermography to
-quantify thermal heterogeneity. It uses the \texttt{Thermimage} package
-(Tattersall, \protect\hyperlink{ref-tattersall_thermimage:_2017}{2017})
-to batch process data from FLIR thermal cameras, and takes inspiration
-from FRAGSTATS (McGarigal et al.,
-\protect\hyperlink{ref-fragstats_2012}{2012}), \texttt{SDMTools}
-(VanDerWal et al., \protect\hyperlink{ref-sdmtools_2014}{2014}), Faye et
-al. (\protect\hyperlink{ref-faye_toolbox_2016}{2016}) and Shi et al.
-(\protect\hyperlink{ref-shi_framework_2016}{2016}) to facilitate the
-calculation of various metrics of thermal heterogeneity for any gridded
-temperature data.
+\texttt{ThermStats} is designed for biologists using thermography to quantify thermal heterogeneity. It uses the \texttt{Thermimage} package (Tattersall, \protect\hyperlink{ref-tattersall_thermimage:_2017}{2017}) to batch process data from FLIR thermal cameras, and takes inspiration from FRAGSTATS (McGarigal, Cushman, \& Ene, \protect\hyperlink{ref-fragstats_2012}{2012}), \texttt{SDMTools} (VanDerWal, Falconi, Januchowski, Shoo, \& Storlie, \protect\hyperlink{ref-sdmtools_2014}{2014}), Faye, Rebaudo, Yánez-Cajo, Cauvy-Fraunié, \& Dangles (\protect\hyperlink{ref-faye_toolbox_2016}{2016}) and Shi, Wen, Paull, \& Guo (\protect\hyperlink{ref-shi_framework_2016}{2016}) to facilitate the calculation of various metrics of thermal heterogeneity for any gridded temperature data.
 
-The package is available to download from GitHub using
-\texttt{devtools}:
+The package is available to download from GitHub using \texttt{devtools}:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -226,16 +211,10 @@ The package is available to download from GitHub using
 
 Once loaded, the code below can be followed step-by-step.
 
-\subsection{Extracting raw data}\label{extracting-raw-data}
+\hypertarget{extracting-raw-data}{%
+\subsection{Extracting raw data}\label{extracting-raw-data}}
 
-Data are extracted from FLIR images using \texttt{batch\_extract}. This
-is a batch implementation of the \texttt{readflirJPG} function from
-\texttt{Thermimage}. It requires only the path to the directory of FLIR
-thermal images, and the freely available external software
-\href{https://www.sno.phy.queensu.ca/~phil/exiftool/}{`Exiftool'}.
-Besides raw data, this step also retrieves camera-specific calibration
-parameters which are required later to convert raw data to temperature
-values.
+Data are extracted from FLIR images using \texttt{batch\_extract}. This is a batch implementation of the \texttt{readflirJPG} function from \texttt{Thermimage}. It requires only the path to the directory of FLIR thermal images, and the freely available external software \href{https://www.sno.phy.queensu.ca/~phil/exiftool/}{`Exiftool'}. Besides raw data, this step also retrieves camera-specific calibration parameters which are required later to convert raw data to temperature values.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -247,29 +226,19 @@ values.
 \end{Highlighting}
 \end{Shaded}
 
-\subsection{Converting raw data to
-temperature}\label{converting-raw-data-to-temperature}
+\hypertarget{converting-raw-data-to-temperature}{%
+\subsection{Converting raw data to temperature}\label{converting-raw-data-to-temperature}}
 
-Raw data are encoded in each thermal image as a 16 bit analog-to-digital
-signal, which represents the radiance received by the infrared sensor.
-The function \texttt{batch\_convert} converts these raw data to
-temperature values using equations from infrared thermography, via a
-batch implementation of the function \texttt{raw2temp} in
-\texttt{Thermimage}. It uses the calibration constants extracted in
-\texttt{batch\_extract} and environmental parameters defined by the
-user:
+Raw data are encoded in each thermal image as a 16 bit analog-to-digital signal, which represents the radiance received by the infrared sensor. The function \texttt{batch\_convert} converts these raw data to temperature values using equations from infrared thermography, via a batch implementation of the function \texttt{raw2temp} in \texttt{Thermimage}. It uses the calibration constants extracted in \texttt{batch\_extract} and environmental parameters defined by the user:
 
 \begin{itemize}
 \tightlist
 \item
-  Emissivity = the amount of radiation emitted by a particular object,
-  for a given temperature.
+  Emissivity = the amount of radiation emitted by a particular object, for a given temperature.
 \item
-  Object distance = the distance between the camera and the object of
-  interest.
+  Object distance = the distance between the camera and the object of interest.
 \item
-  Reflected apparent temperature = thermal radiation that originates
-  from other objects and is reflected by the object of interest.
+  Reflected apparent temperature = thermal radiation that originates from other objects and is reflected by the object of interest.
 \item
   Atmospheric temperature = the temperature of the atmosphere.
 \item
@@ -313,26 +282,12 @@ user:
 \end{Highlighting}
 \end{Shaded}
 
-\subsection{Calculating thermal
-statistics}\label{calculating-thermal-statistics}
+\hypertarget{calculating-thermal-statistics}{%
+\subsection{Calculating thermal statistics}\label{calculating-thermal-statistics}}
 
-Statistics can be calculated for individual thermal images (in a matrix
-or raster format), or across multiple images within a specified
-grouping. The latter is useful for sampling designs where multiple
-images are collected at each sampling event to capture temperature
-across a wider sampling unit, such as a plot. In either case, statistics
-can include summary statistics specified by the user -- for example,
-mean, minimum and maximum -- as well as thermal connectivity (based on
-the climate connectivity measure of McGuire et al.,
-\protect\hyperlink{ref-mcguire_achieving_2016}{2016}) and spatial
-statistics for hot and cold spots, identified using the G* variant of
-the Getis-Ord local statistic (Getis and Ord,
-\protect\hyperlink{ref-getis_local_1996}{1996}).
+Statistics can be calculated for individual thermal images (in a matrix or raster format), or across multiple images within a specified grouping. The latter is useful for sampling designs where multiple images are collected at each sampling event to capture temperature across a wider sampling unit, such as a plot. In either case, statistics can include summary statistics specified by the user -- for example, mean, minimum and maximum -- as well as thermal connectivity (based on the climate connectivity measure of McGuire, Lawler, McRae, \& Theobald, \protect\hyperlink{ref-mcguire_achieving_2016}{2016}) and spatial statistics for hot and cold spots, identified using the G* variant of the Getis-Ord local statistic (Getis \& Ord, \protect\hyperlink{ref-getis_local_1996}{1996}).
 
-For an individual image, \texttt{get\_stats} requires the user to
-specify the image and the desired statistics. Statistics can be
-calculated for geographic temperature data, in which case the user
-should also define the extent and projection of the data.
+For an individual image, \texttt{get\_stats} requires the user to specify the image and the desired statistics. Statistics can be calculated for geographic temperature data, in which case the user should also define the extent and projection of the data.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -360,23 +315,12 @@ should also define the extent and projection of the data.
 \end{Highlighting}
 \end{Shaded}
 
-For grouped images, \texttt{stats\_by\_group} requires the user to
-supply a list of matrices or a raster stack, and (optionally) the
-metadata and the name of the variable in the metadata that defines the
-grouping. Table 1 shows the metadata used in the code snippet, where
-photo number (`photo\_no') defines individual temperature matrices, and
-the replicate identity (`rep\_id') defines the grouping of photos. There
-are two replicates, `T7P1' and `T7P2', and each has two associated
-photos.
+For grouped images, \texttt{stats\_by\_group} requires the user to supply a list of matrices or a raster stack, and (optionally) the metadata and the name of the variable in the metadata that defines the grouping. Table 1 shows the metadata used in the code snippet, where photo number (`photo\_no') defines individual temperature matrices, and the replicate identity (`rep\_id') defines the grouping of photos. There are two replicates, `T7P1' and `T7P2', and each has two associated photos.
 
-By default, both \texttt{get\_stats} and \texttt{stats\_by\_group}
-return a dataframe with patch statistics (Table 2) for each image or
-group, respectively.
+By default, both \texttt{get\_stats} and \texttt{stats\_by\_group} return a dataframe with patch statistics (Table 2) for each image or group, respectively.
 
 \begin{longtable}[]{@{}rlrr@{}}
-\caption{Example metadata denoting the grouping (`rep\_id') of different
-thermal images. Statistics can be calculated over multiple images within
-a group, using the function \texttt{stats\_by\_group}.}\tabularnewline
+\caption{Example metadata denoting the grouping (`rep\_id') of different thermal images. Statistics can be calculated over multiple images within a group, using the function \texttt{stats\_by\_group}.}\tabularnewline
 \toprule
 photo\_no & rep\_id & atm\_temp & rel\_humidity\tabularnewline
 \midrule
@@ -393,17 +337,13 @@ photo\_no & rep\_id & atm\_temp & rel\_humidity\tabularnewline
 \end{longtable}
 
 \begin{longtable}[]{@{}rrrrrr@{}}
-\caption{A snippet of hot spot patch statistics returned by
-\texttt{stats\_by\_group}, which implements \texttt{get\_stats} within
-groups.}\tabularnewline
+\caption{A snippet of hot spot patch statistics returned by \texttt{stats\_by\_group}, which implements \texttt{get\_stats} within groups.}\tabularnewline
 \toprule
-img\_median & img\_perc\_5 & img\_perc\_95 & img\_SHDI &
-hot\_shape\_index & hot\_aggregation\tabularnewline
+img\_median & img\_perc\_5 & img\_perc\_95 & img\_SHDI & hot\_shape\_index & hot\_aggregation\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-img\_median & img\_perc\_5 & img\_perc\_95 & img\_SHDI &
-hot\_shape\_index & hot\_aggregation\tabularnewline
+img\_median & img\_perc\_5 & img\_perc\_95 & img\_SHDI & hot\_shape\_index & hot\_aggregation\tabularnewline
 \midrule
 \endhead
 23.5 & 23 & 24.5 & 1.16 & 7.54 & 0.895\tabularnewline
@@ -411,17 +351,10 @@ hot\_shape\_index & hot\_aggregation\tabularnewline
 \bottomrule
 \end{longtable}
 
-\subsection{Plotting}\label{plotting}
+\hypertarget{plotting}{%
+\subsection{Plotting}\label{plotting}}
 
-In addition to patch statistics, \texttt{get\_stats} can return (1) the
-temperature dataset in a dataframe format, and (2) a
-\texttt{SpatialPolygonsDataFrame} of its hot and cold spots. The
-function \texttt{plot\_patches} can then recreate the original thermal
-image overlaid with outlines of hot and cold spots, as well as the
-temperature distribution if \texttt{plot\_distribution\ =\ TRUE}
-(\autoref{fig:fig-B-1}).
-
-
+In addition to patch statistics, \texttt{get\_stats} can return (1) the temperature dataset in a dataframe format, and (2) a \texttt{SpatialPolygonsDataFrame} of its hot and cold spots. The function \texttt{plot\_patches} can then recreate the original thermal image overlaid with outlines of hot and cold spots, as well as the temperature distribution if \texttt{plot\_distribution\ =\ TRUE} (\autoref{fig:fig-B-1}).
 
 
 
@@ -431,7 +364,9 @@ temperature distribution if \texttt{plot\_distribution\ =\ TRUE}
     \CommentTok{# The raw temperature data}
     \DataTypeTok{df =}\NormalTok{ flir_stats}\OperatorTok{$}\NormalTok{df,}
     \CommentTok{# The patch outlines}
-    \DataTypeTok{patches =}\NormalTok{ flir_stats}\OperatorTok{$}\NormalTok{patches)}
+    \DataTypeTok{patches =}\NormalTok{ flir_stats}\OperatorTok{$}\NormalTok{patches, }
+    \CommentTok{# Add hatching}
+    \DataTypeTok{hatching =} \OtherTok{TRUE}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -441,77 +376,36 @@ temperature distribution if \texttt{plot\_distribution\ =\ TRUE}
 
 }
 
-\caption{The output of \texttt{plot\_patches} includes a histogram
-and the original temperature data overlaid with outlines of hot and cold
-spots, identified using the G* variant of the Getis-Ord local statistic.}\label{fig:fig-B-1}
+\caption{The output of \texttt{plot\_patches} includes a histogram and the original temperature data overlaid with outlines of hot and cold spots, identified using the G* variant of the Getis-Ord local statistic.}\label{fig:fig-B-1}
 \end{figure}
 
-\subsection*{References}\label{references}
-\addcontentsline{toc}{subsection}{References}
+\pagebreak
+
+\hypertarget{references}{%
+\section*{References}\label{references}}
+\addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
-\hypertarget{ref-faye_toolbox_2016}{}
-Faye, E., Rebaudo, F., Yánez-Cajo, D., Cauvy-Fraunié, S., Dangles, O.,
-2016. A toolbox for studying thermal heterogeneity across spatial
-scales: From unmanned aerial vehicle imagery to landscape metrics.
-Methods in Ecology and Evolution 7, 437--446.
-doi:\href{https://doi.org/10.1111/2041-210X.12488}{10.1111/2041-210X.12488}
+\leavevmode\hypertarget{ref-faye_toolbox_2016}{}%
+Faye, E., Rebaudo, F., Yánez-Cajo, D., Cauvy-Fraunié, S., \& Dangles, O. (2016). A toolbox for studying thermal heterogeneity across spatial scales: From unmanned aerial vehicle imagery to landscape metrics. \emph{Methods in Ecology and Evolution}, \emph{7}(4), 437--446. doi:\href{https://doi.org/10.1111/2041-210X.12488}{10.1111/2041-210X.12488}
 
-\hypertarget{ref-getis_local_1996}{}
-Getis, A., Ord, J.K., 1996. Local spatial statistics: An overview.
-Spatial analysis: modelling in a GIS environment 374, 261--277.
+\leavevmode\hypertarget{ref-getis_local_1996}{}%
+Getis, A., \& Ord, J. K. (1996). Local spatial statistics: An overview. \emph{Spatial Analysis: Modelling in a GIS Environment}, \emph{374}, 261--277.
 
-\hypertarget{ref-fragstats_2012}{}
-McGarigal, K., Cushman, S.A., Ene, E., 2012. FRAGSTATS v4: Spatial
-pattern analysis program for categorical and continuous maps. Computer
-software program produced by the authors at the University of
-Massachusetts, Amherst. Available at:
-\href{http://www.umass.edu/landeco/research/fragstats/fragstats.html}{Http://www.umass.edu/landeco/research/fragstats/fragstats.html}.
+\leavevmode\hypertarget{ref-fragstats_2012}{}%
+McGarigal, K., Cushman, S. A., \& Ene, E. (2012). FRAGSTATS v4: Spatial pattern analysis program for categorical and continuous maps. Retrieved from \url{http://www.umass.edu/landeco/research/fragstats/fragstats.html}
 
-\hypertarget{ref-mcguire_achieving_2016}{}
-McGuire, J.L., Lawler, J.J., McRae, B.H., Theobald, D.M., 2016.
-Achieving climate connectivity in a fragmented landscape. Proceedings of
-the National Academy of Sciences 113, 7195--7200.
-doi:\href{https://doi.org/10.1073/pnas.1602817113}{10.1073/pnas.1602817113}
+\leavevmode\hypertarget{ref-mcguire_achieving_2016}{}%
+McGuire, J. L., Lawler, J. J., McRae, B. H., \& Theobald, D. M. (2016). Achieving climate connectivity in a fragmented landscape. \emph{Proceedings of the National Academy of Sciences}, \emph{113}(26), 7195--7200. doi:\href{https://doi.org/10.1073/pnas.1602817113}{10.1073/pnas.1602817113}
 
-\hypertarget{ref-shi_framework_2016}{}
-Shi, H., Wen, Z., Paull, D., Guo, M., 2016. A framework for quantifying
-the thermal buffering effect of microhabitats. Biological Conservation
-204, 175--180.
-doi:\href{https://doi.org/10.1016/j.biocon.2016.11.006}{10.1016/j.biocon.2016.11.006}
+\leavevmode\hypertarget{ref-shi_framework_2016}{}%
+Shi, H., Wen, Z., Paull, D., \& Guo, M. (2016). A framework for quantifying the thermal buffering effect of microhabitats. \emph{Biological Conservation}, \emph{204}, 175--180. doi:\href{https://doi.org/10.1016/j.biocon.2016.11.006}{10.1016/j.biocon.2016.11.006}
 
-\hypertarget{ref-tattersall_thermimage:_2017}{}
-Tattersall, G.J., 2017. Thermimage: Thermal Image Analysis. Available
-at:
-\href{https://CRAN.R-project.org/package=Thermimage}{Https://cran.R-project.org/package=Thermimage}.
+\leavevmode\hypertarget{ref-tattersall_thermimage:_2017}{}%
+Tattersall, G. J. (2017). Thermimage: Thermal Image Analysis. Retrieved from \url{https://CRAN.R-project.org/package=Thermimage}
 
-\hypertarget{ref-sdmtools_2014}{}
-VanDerWal, J., Falconi, L., Januchowski, S., Shoo, L., Storlie, C.,
-2014. SDMTools: Species distribution modelling tools: Tools for
-processing data associated with species distribution modelling
-exercises. Available at:
-\href{https://CRAN.R-project.org/package=SDMTools}{Https://cran.R-project.org/package=SDMTools}.
-
-
-\pagebreak
-\section{Text S2: Literature review methods}
-
-To review the use of thermography in ecological studies we conducted a review of peer-reviewed literature in the Web of Science Core Collection. Search terms were: ``TS = (``therm\* camera'' OR ``therm\* imag\*'' OR ``therm\* photo'' OR ``infra\* imag\*'' OR ``infra\* photo'' OR thermograph\*) NOT TS = (remote sensing OR satellite OR LANDSAT) AND WC = (Biodiversity Conservation OR Ecology) NOT WC = (Remote Sensing)''. The search was run on 3\textsuperscript{rd} November 2018, and returned 118 studies. Reviewing all studies manually and excluding any that only used thermal images for animal detection left a total of 48 articles, published between 1977 and 2018 (see reference list). For comparison with all ecological studies published we repeated the seach for the same time period, excluding the thermography-specific search terms. This returned 497,494 studies. To analyse trends over time (Figure 1) we fit a binomial generalized linear model of the proportion of ecological studies that used thermography (binomial data: number of studies using thermography versus the number not using thermography) against year, using the package \textmyfont{lme4} (Bates et al., 2015) in \textmyfont{R} (R Core Team, 2018).
-
-\nocite{*}
-
-\subsection*{References}
-\addcontentsline{toc}{subsection}{References}
-
-Bates, D., Mächler, M., Bolker, B., Walker, S., 2015. Fitting Linear Mixed-Effects Models Using lme4. Journal of Statistical Software 67, 1–48. doi:10.18637/jss.v067.i01
-
-R Core Team, 2018. R: A Language and Environment for Statistical Computing.
-
-\renewcommand\bibsection{\subsection*{\refname}}
-\addcontentsline{toc}{subsection}{Thermography literature}
-\renewcommand\refname{Thermography literature}
-\bibliographystyle{apalike}
-\bibliography{thermog_studies}
+\leavevmode\hypertarget{ref-sdmtools_2014}{}%
+VanDerWal, J., Falconi, L., Januchowski, S., Shoo, L., \& Storlie, C. (2014). SDMTools: Species distribution modelling tools: Tools for processing data associated with species distribution modelling exercises. Available at: \href{https://CRAN.R-project.org/package=SDMTools}{Https://cran.r-project.org/package=SDMTools}. Retrieved from \url{https://CRAN.R-project.org/package=SDMTools}
 
 
 \end{document}
