--- a/refs.bib
+++ b/refs.bib
@@ -3606,3 +3606,10 @@
 	keywords = {Microclimate, Climate modelling, Habitat heterogeneity, Meteorological, Microsensors, Small scale, Topoclimate},
 	pages = {101--161}
 }
+@misc{sdmtools_2014,
+    title = {{SDMTools}: Species Distribution Modelling Tools: Tools for processing data associated with species distribution modelling exercises. {A}vailable at: \url{https://CRAN.R-project.org/package=SDMTools}},
+    author = {Jeremy VanDerWal and Lorena Falconi and Stephanie Januchowski and Luke Shoo and Collin Storlie},
+    year = {2014},
+    note = "R package version 1.1-221. Available at: \url{https://CRAN.R-project.org/package=SDMTools}",
+    url = {https://CRAN.R-project.org/package=SDMTools}
+  }
