--- a/SeniorRA_thermal_methods_SOM.tex
+++ b/SeniorRA_thermal_methods_SOM.tex
@@ -192,7 +192,7 @@ Rebecca A. Senior\textsuperscript{1}*, Jane K. Hill\textsuperscript{2} and David
 
 }
 
-\caption{Schematic summarising the key functions for processing groups of images (left) or a single image (right).}\label{fig:fig-B-2}
+\caption{Schematic summarising the key functions for processing groups of images (left) or a single image (right).}\label{fig:fig-2}
 \end{figure}
 
 \hypertarget{summary}{%
@@ -354,7 +354,7 @@ img\_median & img\_perc\_5 & img\_perc\_95 & img\_SHDI & hot\_shape\_index & hot
 \hypertarget{plotting}{%
 \subsection{Plotting}\label{plotting}}
 
-In addition to patch statistics, \texttt{get\_stats} can return (1) the temperature dataset in a dataframe format, and (2) a \texttt{SpatialPolygonsDataFrame} of its hot and cold spots. The function \texttt{plot\_patches} can then recreate the original thermal image overlaid with outlines of hot and cold spots, as well as the temperature distribution if \texttt{plot\_distribution\ =\ TRUE} (\autoref{fig:fig-B-1}).
+In addition to patch statistics, \texttt{get\_stats} can return (1) the temperature dataset in a dataframe format, and (2) a \texttt{SpatialPolygonsDataFrame} of its hot and cold spots. The function \texttt{plot\_patches} can then recreate the original thermal image overlaid with outlines of hot and cold spots, as well as the temperature distribution if \texttt{plot\_distribution\ =\ TRUE} (\autoref{fig:fig-1}).
 
 
 
@@ -372,11 +372,11 @@ In addition to patch statistics, \texttt{get\_stats} can return (1) the temperat
 
 \begin{figure}[H]
 
-{\centering \includegraphics{./output/fig-B-1-1} 
+{\centering \includegraphics{./output/fig-1-1} 
 
 }
 
-\caption{The output of \texttt{plot\_patches} includes a histogram and the original temperature data overlaid with outlines of hot and cold spots, identified using the G* variant of the Getis-Ord local statistic.}\label{fig:fig-B-1}
+\caption{The output of \texttt{plot\_patches} includes a histogram and the original temperature data overlaid with outlines of hot and cold spots, identified using the G* variant of the Getis-Ord local statistic.}\label{fig:fig-1}
 \end{figure}
 
 \pagebreak
