Adding Zenodo package ref
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/refs.bib
+++ b/refs.bib
@@ -3613,3 +3613,11 @@
     note = "R package version 1.1-221. Available at: \url{https://CRAN.R-project.org/package=SDMTools}",
     url = {https://CRAN.R-project.org/package=SDMTools}
   }
+@misc{senior_thermstats_2019, 
+	title={{ThermStats v.0.7.10. {A}vailable at: \url{https://doi.org/10.5281/zenodo.3236753}}, 
+	DOI={10.5281/zenodo.3236753}, 
+	abstractNote={<p>Initial release</p>}, 
+	publisher={Zenodo}, 
+	author={Rebecca A. Senior}, 
+	year={2019}, 
+	month={Jun}}
