Correcting indentation and punctuation
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/refs.bib
+++ b/refs.bib
@@ -3585,11 +3585,11 @@
 	annote = {R package version 3.0.0}
 }
 @misc{gamm4_2017,
-    title = {{gamm4}: Generalized Additive Mixed Models using 'mgcv' and 'lme4'},
-    author = {Simon Wood and Fabian Scheipl},
-    year = {2017},
-    note = "R package version 0.2-5. Available at: \url{https://CRAN.R-project.org/package=gamm4}",
-    url = {https://CRAN.R-project.org/package=gamm4},
+	title = {{gamm4}: Generalized Additive Mixed Models using 'mgcv' and 'lme4'},
+	author = {Simon Wood and Fabian Scheipl},
+	year = {2017},
+	note = "R package version 0.2-5. Available at: \url{https://CRAN.R-project.org/package=gamm4}",
+	url = {https://CRAN.R-project.org/package=gamm4}
   }
 @book{bramer_advances_2018,
 	series = {Next {Generation} {Biomonitoring}: {Part} 1},
@@ -3607,17 +3607,18 @@
 	pages = {101--161}
 }
 @misc{sdmtools_2014,
-    title = {{SDMTools}: Species Distribution Modelling Tools: Tools for processing data associated with species distribution modelling exercises. {A}vailable at: \url{https://CRAN.R-project.org/package=SDMTools}},
-    author = {Jeremy VanDerWal and Lorena Falconi and Stephanie Januchowski and Luke Shoo and Collin Storlie},
-    year = {2014},
-    note = "R package version 1.1-221. Available at: \url{https://CRAN.R-project.org/package=SDMTools}",
-    url = {https://CRAN.R-project.org/package=SDMTools}
+	title = {{SDMTools}: Species Distribution Modelling Tools: Tools for processing data associated with species distribution modelling exercises. {A}vailable at: \url{https://CRAN.R-project.org/package=SDMTools}},
+	author = {Jeremy VanDerWal and Lorena Falconi and Stephanie Januchowski and Luke Shoo and Collin Storlie},
+	year = {2014},
+	note = "R package version 1.1-221. Available at: \url{https://CRAN.R-project.org/package=SDMTools}",
+	url = {https://CRAN.R-project.org/package=SDMTools}
   }
-@misc{senior_thermstats_2019, 
-	title={{ThermStats v.0.7.10. {A}vailable at: \url{https://doi.org/10.5281/zenodo.3236753}}, 
-	DOI={10.5281/zenodo.3236753}, 
-	abstractNote={<p>Initial release</p>}, 
-	publisher={Zenodo}, 
-	author={Rebecca A. Senior}, 
-	year={2019}, 
-	month={Jun}}
+@misc{senior_thermstats_2019,
+	title = {{ThermStats v.0.7.10.} {A}vailable at: \url{https://doi.org/10.5281/zenodo.3236753}},
+	author = {Rebecca A. Senior},
+	year = {2019},
+	doi = {10.5281/zenodo.3236753},
+	publisher={Zenodo},
+	note = "R package version 0.7.10. Available at: \url{https://doi.org/10.5281/zenodo.3236753}",
+	abstractNote = {<p>Initial release</p>}
+  }
